# galaxy-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
cli-agent/: .env.example  .pre-commit-config.yaml  LINTING.md  Makefile  README.md  pyproject.toml  pytest.ini
cli-agent/galaxy_cli_agent/: agent.py  cli.py
cli-agent/tests/: __init__.py  test_agent.py  test_cli.py
galaxy-cli-agent/: .env.example  LICENSE  README.md  pyproject.toml
galaxy-cli-agent/galaxy_cli_agent/: __init__.py  agent.py  cli.py
mcp-server-galaxy-py/: main.py
