[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-mcp-workspace"
version = "0.2.0"
description = "Galaxy MCP workspace containing MCP server and CLI agent"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Dannon Baker", email = "dannon.baker@gmail.com"}
]
maintainers = [
    {name = "Dannon Baker", email = "dannon.baker@gmail.com"},
    {name = "Galaxy Project", email = "contact@galaxyproject.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    # Core shared dependencies
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/galaxyproject/galaxy-mcp"
Repository = "https://github.com/galaxyproject/galaxy-mcp"
Issues = "https://github.com/galaxyproject/galaxy-mcp/issues"

[project.optional-dependencies]
# MCP Server dependencies
mcp-server = [
    "bioblend>=1.5.0",
    "fastmcp>=2.3.0",
    "requests>=2.32.3",
]

# CLI Agent dependencies (fixed to remove google-generativeai)
cli = [
    "pydantic-ai>=0.1.30",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

# Development dependencies (consolidated)
dev = [
    "ruff>=0.11.2",
    "mypy>=1.8.0", 
    "types-requests>=2.31.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.0",
    "pytest-watch>=4.2.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "pre-commit>=3.6.0",
    "tox>=4.11.0",
    "build>=1.2.1",
    "twine>=5.0.0",
    # CLI testing dependencies
    "black>=23.0.0",
]

# Combined installation options
all = [
    "galaxy-mcp-workspace[mcp-server,cli]"
]

[project.scripts] 
# MCP Server
galaxy-mcp = "galaxy_mcp.__main__:run"

# CLI Agent (when cli feature is enabled)
galaxy-agent = "galaxy_cli_agent.cli:app"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "A", "C4", "SIM", "PT"]
ignore = ["F403", "B904", "B017", "PT011", "SIM117"]

[tool.pytest.ini_options]
addopts = "-v --cov=galaxy_mcp --cov-report=term-missing"
testpaths = ["mcp-server-galaxy-py/tests", "cli-agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
mypy_path = "mcp-server-galaxy-py/src:cli-agent"

[tool.black]
line-length = 100
target-version = ["py310"]