[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-cli-agent"
version = "0.1.0"
description = "CLI-based agent for interacting with Galaxy using pydantic-ai"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Galaxy Team"}
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-ai>=0.1.30",
    "httpx>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0", 
    "python-dotenv>=1.0.0",
    # Removed google-generativeai - will use pydantic-ai's model handling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270"
]

[project.scripts]
galaxy-agent = "galaxy_cli_agent.cli:app"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "A", "C4", "SIM", "PT"]
ignore = ["F403", "B904", "B017", "PT011", "SIM117"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true